# coursework_5

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: currency.py  db_create.py  db_insert.py  db_manager.py  hh_abc.py  hh_company.py  hh_vacancy.py  interactive.py  json_worker.py  parser.py
tests/: conftest.py  test_hh_company.py  test_hh_vacancy.py  test_json_worker.py
