[tool.poetry]
name = "coursework-5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
requests = "^2.31.0"
lxml = "^5.2.1"
flake8 = "^7.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
